[package]
name = "lalrpop_close_block_and_statement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer", "unicode"] }
